elinks (0.12~20080127-2) experimental; urgency=low

  * Remove patch 07_local-CGI-query-fix.diff (Closes: #464073)

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Tue, 05 Feb 2008 14:59:01 +0530

elinks (0.12~20080127-1) experimental; urgency=low

  * Enable support for new protocols SMB and Bittorrent
  * Enable Guile, Python, Ruby and Javascript scripting functionality
  * Enable extra debugging support for this experimental release
  * Enable local CGI and ex mode
  * Add a warning in README.Debian about experimental features
  * Remove patches (fixes already present in 0.12)
    + 01_asciidoc7compatible.diff
    + 04_380347-entity_cache-overflow.diff
    + 05_257762-transparency-off.diff
  * Refresh and update rest of the patches for 0.12
  * Modify save-stamp and clean-patched to save/restore files that are
    modified during build
  * Remove the get-orig-source target because it doesn't make sense for
    packages based on snapshots.
  * Thanks to أحمد المحمودي (Ahmed El-Mahmoudy) for the push
    to create experimental packages and the patches at #408610.

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 03 Feb 2008 08:17:52 +0530

elinks (0.11.3-4) unstable; urgency=low

  * Update 02_setup-bugs-FSSTND.diff to prevent changing contrib/elinks.conf
    (it is not used anymore).

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 27 Jan 2008 21:49:04 +0530

elinks (0.11.3-3) unstable; urgency=low

  * Remove 06_elinks.conf-parse-error.diff and use a minimal elinks.conf file
    with only the user_agent setting.  Thanks giggz <giggzounet@gmail.com> for
    the bug report and Kalle Olavi Niemitalo for suggestion (Closes: #460912)
  * Rename patch 01_asciidoc-escape-FTBFS as 01_asciidoc7compatible to add a
    "-a asciidoc7compatible" to ASCIIDOC_FLAGS.  Thanks Kalle Olavi Niemitalo
    <kon@iki.fi> for the suggestion.
  * debian/copyright: Add 2008 to Debian packaging Copyright 'years'.