@@ -22,6 +22,20 @@ Description: Advanced text-mode WWW browser
  can display colors, supports the Lua scripting language, IPV6 and has
  many other features.
 
+Package: elinks-dbg
+Architecture: any
+Priority: extra
+Recommends: elinks (= ${binary:Version})
+Conflicts: elinks-lite-dbg
+Description: Debugging symbols for ELinks - An advanced text-mode WWW browser
+ ELinks (Enhanced Links) is a lynx-like character mode browser, created
+ from the Links browser with many patches and enhancements.  It includes
+ support for rendering tables and frames, features background downloads,
+ can display colors, supports the Lua scripting language, IPV6 and has
+ many other features.
+ .
+ This package contains the the debugging symbols for elinks.
+
 Package: elinks-data
 Architecture: all
 Recommends: elinks (= ${source:Version})
@@ -65,3 +79,17 @@ Description: Lightweight version of Elinks - An advanced text-mode WWW browser
  .
  This lite version contains no scripting or extra features but doesn't
  depend on other libraries either, so it's useful for small systems.
+
+Package: elinks-lite-dbg
+Architecture: any
+Priority: extra
+Recommends: elinks-lite (= ${binary:Version})
+Conflicts: elinks-dbg
+Description: Debugging symbols for ELinks lite - An advanced text-mode WWW browser
+ ELinks (Enhanced Links) is a lynx-like character mode browser, created
+ from the Links browser with many patches and enhancements.  It includes
+ support for rendering tables and frames, features background downloads,
+ can display colors, supports the Lua scripting language, IPV6 and has
+ many other features.
+ .
+ This package contains the the debugging symbols for elinks-lite.
