@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
@@ -205,6 +205,12 @@ install-arch:
 	dh_link -pelinks usr/share/doc/elinks-data usr/share/doc/elinks
 	dh_install -s
 
+strip-arch:
+	dh_testdir
+	dh_testroot
+	dh_strip -pelinks --dbg-package=elinks-dbg
+	dh_strip -pelinks-lite --dbg-package=elinks-lite-dbg
+
 # Must not depend on anything. This is to be called by
 # binary-arch/binary-indep
 # in another 'make' thread.
@@ -217,7 +223,6 @@ binary-common:
 	dh_installmenu
 	dh_desktop
 	dh_installmime
-	dh_strip
 	dh_compress 
 	dh_fixperms
 	dh_installdeb
@@ -231,8 +236,8 @@ binary-indep: build-indep install-indep
 	$(MAKE) -f debian/rules DH_OPTIONS=-i binary-common
 
 # Build architecture dependant packages using the common target.
-binary-arch: build-arch install-arch
+binary-arch: build-arch install-arch strip-arch
 	$(MAKE) -f debian/rules DH_OPTIONS=-s binary-common
 
 binary: binary-arch binary-indep
-.PHONY: build clean binary-indep binary-arch binary install install-indep install-arch patch unpatch get-orig-source save-upstream get-orig-source
+.PHONY: build clean binary-indep binary-arch binary install install-indep install-arch patch strip-arch unpatch get-orig-source save-upstream get-orig-source
